// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmongUs conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do AmongUs",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Membros",
        "Pts",
        "Pa",
        "nI",
        "Vi",
        "Vc",
        "Ct",
        "K",
        "CA",
        "IA",
      ],
      Array [
        "🥇",
        "Mestre Gui",
        "+13",
        "127",
        "3",
        "2",
        "2",
        "1",
        "9",
        "4",
        "0",
      ],
      Array [
        "🥈",
        "Squnha",
        "+10",
        "117",
        "2",
        "2",
        "3",
        "3",
        "2",
        "8",
        "3",
      ],
      Array [
        "🥉",
        "Hydra",
        "+8",
        "72",
        "2",
        "1",
        "2",
        "1",
        "4",
        "2",
        "1",
      ],
      Array [
        "4º",
        "Cludos",
        "+6",
        "71",
        "3",
        "1",
        "2",
        "2",
        "3",
        "4",
        "3",
      ],
      Array [
        "5º",
        "Bárbara",
        "+5",
        "64",
        "1",
        "0",
        "2",
        "1",
        "2",
        "7",
        "1",
      ],
      Array [
        "6º",
        "Xadas",
        "+5",
        "59",
        "1",
        "1",
        "3",
        "1",
        "2",
        "0",
        "3",
      ],
      Array [
        "7º",
        "Frazão",
        "+4",
        "46",
        "3",
        "1",
        "1",
        "0",
        "3",
        "1",
        "1",
      ],
      Array [
        "8º",
        "Geremias",
        "+4",
        "43",
        "0",
        "0",
        "3",
        "3",
        "0",
        "3",
        "5",
      ],
      Array [
        "9º",
        "Wisdow",
        "+3",
        "31",
        "0",
        "0",
        "3",
        "0",
        "0",
        "4",
        "6",
      ],
    ],
  ],
  "text": "Rankings do AmongUs#MembrosPtsPanIViVcCtKCAIA🥇Mestre Gui+131273221940🥈Squnha+101172233283🥉Hydra+87221214214ºCludos+67131223435ºBárbara+56410212716ºXadas+55911312037ºFrazão+44631103118ºGeremias+44300330359ºWisdow+3310030046Pts - Pontos Ganhos | Pa - Pontos AmongUs | nI - Número de vezes a impostor | Vi - Vitórias como Impostor | Vc - Vitórias como Crewmate | Ct - Completed Tasks | K - Kills | CA - Correct Accusations | IA - Incorrect Accusations",
}
`;

exports[`ArenasLOL conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do LoL Arenas",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Duo",
        "Membros",
        "Pts",
        "M",
        "1J",
        "2J",
        "3J",
        "4J",
        "5J",
      ],
      Array [
        "🥇",
        "OmniMommy",
        "Omniomm e Madmess",
        "+13",
        "2.6",
        "5",
        "3",
        "2",
        "1",
        "2",
      ],
      Array [
        "🥈",
        "Familia Superior",
        "Cludos e Squnha",
        "+10",
        "2.8",
        "6",
        "2",
        "3",
        "2",
        "1",
      ],
      Array [
        "🥉",
        "Goma",
        "Frosty e Wisdow",
        "+8",
        "3.6",
        "1",
        "4",
        "4",
        "6",
        "3",
      ],
      Array [
        "4º",
        "Stat Checkers",
        "Xadas e João Nuno",
        "+6",
        "3.8",
        "2",
        "5",
        "1",
        "4",
        "7",
      ],
      Array [
        "5º",
        "Gelatina de Cocaina",
        "Gelly e Droga",
        "+5",
        "3.8",
        "4",
        "1",
        "5",
        "5",
        "4",
      ],
      Array [
        "6º",
        "Arrebirópaço",
        "Areias e Brito e Xiro",
        "+5",
        "5",
        "3",
        "7",
        "6",
        "3",
        "6",
      ],
      Array [
        "7º",
        "MVPs da Escape Room",
        "Geremias e Mestre Gui",
        "+4",
        "6.6",
        "8",
        "6",
        "7",
        "7",
        "5",
      ],
      Array [
        "8º",
        "Putas do Afonso",
        "Lemos e Lampreia",
        "+4",
        "7.8",
        "7",
        "8",
        "8",
        "8",
        "8",
      ],
    ],
  ],
  "text": "Rankings do LoL Arenas#DuoMembrosPtsM1J2J3J4J5J🥇OmniMommyOmniomm e Madmess+132.653212🥈Familia SuperiorCludos e Squnha+102.862321🥉GomaFrosty e Wisdow+83.6144634ºStat CheckersXadas e João Nuno+63.8251475ºGelatina de CocainaGelly e Droga+53.8415546ºArrebirópaçoAreias e Brito e Xiro+55376367ºMVPs da Escape RoomGeremias e Mestre Gui+46.6867758ºPutas do AfonsoLemos e Lampreia+47.878888Pts - Pontos Ganhos | M - Média Classificativa | nJ - nº Jogo",
}
`;

exports[`Basquetiladas conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Basquetiladas",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Membros",
        "Pts",
        "R",
      ],
      Array [
        "🥇",
        "Esquilo, Serino & Zé",
        "+8",
        "2-0",
      ],
      Array [
        "🥈",
        "Xadas, Bárbara & Braz",
        "+6",
        "1-1",
      ],
      Array [
        "🥉",
        "Cludos, Squnha & Diogo",
        "+4",
        "0-2",
      ],
    ],
    Array [
      Array [
        "",
        "Resultado",
        "",
      ],
      Array [
        "Os Cubas",
        "11 - 5",
        "Os Caceiteiros",
      ],
      Array [
        "Os Cubas",
        "11 - 7",
        "Os Primos do Pedro",
      ],
      Array [
        "Os Caceiteiros",
        "3 - 1",
        "Os Primos do Pedro",
      ],
    ],
  ],
  "text": "Rankings do Basquetiladas#MembrosPtsR🥇Esquilo, Serino & Zé+82-0🥈Xadas, Bárbara & Braz+61-1🥉Cludos, Squnha & Diogo+40-2Pts - Pontos Ganhos | R - ResultadosResultadoOs Cubas11 - 5Os CaceiteirosOs Cubas11 - 7Os Primos do PedroOs Caceiteiros3 - 1Os Primos do Pedro",
}
`;

exports[`BatalhaNaval conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Batalha Naval",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Membros",
        "Pts",
      ],
      Array [
        "🥇",
        "Xadas, Bárbara, Cludos & João Nuno",
        "+8",
      ],
      Array [
        "🥈",
        "Geremias, Squnha, Atlas & Areias",
        "+4",
      ],
    ],
  ],
  "text": "Rankings do Batalha Naval#MembrosPts🥇Xadas, Bárbara, Cludos & João Nuno+8🥈Geremias, Squnha, Atlas & Areias+4Pts - Pontos Ganhos",
}
`;

exports[`BilaOlimpiadasPage conteudo inalterado 1`] = `
Object {
  "headings": Array [],
  "iframes": Array [],
  "images": Array [
    Array [
      "logo",
      "images/logo2.png",
    ],
  ],
  "tables": Array [],
  "text": "",
}
`;

exports[`Bilabilhar conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Bilabilhar",
    "H1: Brackets",
  ],
  "iframes": Array [
    Array [
      "Bilabilhar",
      "https://challonge.com/pt/cifb0bv5/module",
    ],
  ],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Membros",
        "Pts",
        "R",
      ],
      Array [
        "🥇",
        "Lekky & Lemos",
        "+13",
        "4-0",
      ],
      Array [
        "🥈",
        "Geremias & Alcunha",
        "+10",
        "5-2",
      ],
      Array [
        "🥉",
        "Braz & João Nuno",
        "+8",
        "2-2",
      ],
      Array [
        "4º",
        "Tone & Hydra",
        "+6",
        "2-2",
      ],
      Array [
        "5º",
        "Squnha & Migas",
        "+5",
        "2-2",
      ],
      Array [
        "5º",
        "Wisdow & Sardoal",
        "+5",
        "1-2",
      ],
      Array [
        "7º",
        "Rodry & Camilo",
        "+4",
        "0-2",
      ],
      Array [
        "7º",
        "Gelly & Esquilo",
        "+4",
        "0-2",
      ],
      Array [
        "7º",
        "Xadas & Bárbara",
        "+4",
        "0-2",
      ],
    ],
  ],
  "text": "Rankings do Bilabilhar#MembrosPtsR🥇Lekky & Lemos+134-0🥈Geremias & Alcunha+105-2🥉Braz & João Nuno+82-24ºTone & Hydra+62-25ºSqunha & Migas+52-25ºWisdow & Sardoal+51-27ºRodry & Camilo+40-27ºGelly & Esquilo+40-27ºXadas & Bárbara+40-2Pts - Pontos Ganhos | R - ResultadosBrackets",
}
`;

exports[`BilapredictsEuropeu conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Bilapredicts Europeu 2024",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Membros",
        "Pts",
        "Total",
        "Match Predictor",
        "Tournament Bracket",
      ],
      Array [
        "🥇",
        "Xadas",
        "+13",
        "1040",
        "430",
        "610",
      ],
      Array [
        "🥈",
        "Squnha",
        "+10",
        "1035",
        "405",
        "630",
      ],
      Array [
        "🥉",
        "Bárbara",
        "+8",
        "1000",
        "310",
        "690",
      ],
      Array [
        "4º",
        "Alcunha",
        "+6",
        "963",
        "333",
        "630",
      ],
      Array [
        "5º",
        "Cludos",
        "+5",
        "910",
        "390",
        "520",
      ],
      Array [
        "6º",
        "Wisdow",
        "+5",
        "864",
        "344",
        "520",
      ],
      Array [
        "7º",
        "Geremias",
        "+4",
        "836",
        "336",
        "500",
      ],
      Array [
        "8º",
        "Mestre Gui",
        "+4",
        "793",
        "333",
        "460",
      ],
      Array [
        "9º",
        "João Nuno",
        "+3",
        "640",
        "0",
        "640",
      ],
      Array [
        "10º",
        "Sardoal",
        "+3",
        "637",
        "287",
        "350",
      ],
      Array [
        "11º",
        "Gelly",
        "+2",
        "609",
        "289",
        "320",
      ],
      Array [
        "12º",
        "Frazão",
        "+2",
        "540",
        "0",
        "540",
      ],
      Array [
        "13º",
        "Lekky",
        "+2",
        "469",
        "199",
        "270",
      ],
      Array [
        "14º",
        "Hydra",
        "+2",
        "446",
        "66",
        "380",
      ],
    ],
  ],
  "text": "Rankings do Bilapredicts Europeu 2024#MembrosPtsTotalMatch PredictorTournament Bracket🥇Xadas+131040430610🥈Squnha+101035405630🥉Bárbara+810003106904ºAlcunha+69633336305ºCludos+59103905206ºWisdow+58643445207ºGeremias+48363365008ºMestre Gui+47933334609ºJoão Nuno+3640064010ºSardoal+363728735011ºGelly+260928932012ºFrazão+2540054013ºLekky+246919927014ºHydra+244666380Pts - Pontos Ganhos",
}
`;

exports[`Bilatrecos conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Bilatrecos",
    "H1: Brackets",
  ],
  "iframes": Array [
    Array [
      "Bilatrecos",
      "https://challonge.com/pt/ro1ajek3/module",
    ],
  ],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Nome",
        "Membros",
        "Pts",
        "J",
        "V",
        "D",
        "GM",
        "GS",
      ],
      Array [
        "🥇",
        "Os Fora da LEI",
        "Wisdow & Mestre Gui",
        "+13",
        "7",
        "5",
        "2",
        "23",
        "18",
      ],
      Array [
        "🥈",
        "Marra e Quilha",
        "Xadas & Bárbara",
        "+10",
        "6",
        "4",
        "1",
        "18",
        "15",
      ],
      Array [
        "🥉",
        "Vale Tudo",
        "Simão & Camilo",
        "+8",
        "3",
        "1",
        "2",
        "8",
        "11",
      ],
      Array [
        "4º",
        "Os Marrecos dos Matrecos",
        "Cludos & Braz",
        "+6",
        "3",
        "1",
        "2",
        "9",
        "11",
      ],
      Array [
        "5º",
        "Duo Lipa",
        "Geremias & Esquilo",
        "+5",
        "3",
        "1",
        "2",
        "10",
        "10",
      ],
      Array [
        "6º",
        "Borussia Doutro Mundo",
        "Squnha & Rodry",
        "+5",
        "2",
        "0",
        "2",
        "5",
        "8",
      ],
    ],
  ],
  "text": "Rankings do Bilatrecos#NomeMembrosPtsJVDGMGS🥇Os Fora da LEIWisdow & Mestre Gui+137522318🥈Marra e QuilhaXadas & Bárbara+106411815🥉Vale TudoSimão & Camilo+83128114ºOs Marrecos dos MatrecosCludos & Braz+63129115ºDuo LipaGeremias & Esquilo+531210106ºBorussia Doutro MundoSqunha & Rodry+520258Pts - Pontos Ganhos | J - Jogos | V - Vitórias | D - Derrotas | GM - Golos Marcados | GS - Golos SofridosBrackets",
}
`;

exports[`Brawlhalla conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Brawlhalla",
    "H1: Brackets",
  ],
  "iframes": Array [
    Array [
      "Brawlhalla",
      "https://challonge.com/223j79z7/module",
    ],
  ],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Membros",
        "Pts",
        "R",
      ],
      Array [
        "🥇",
        "Gelly",
        "+13",
        "5-1",
      ],
      Array [
        "🥈",
        "Wisdow",
        "+10",
        "3-1",
      ],
      Array [
        "🥉",
        "Cludos",
        "+8",
        "3-2",
      ],
      Array [
        "4º",
        "XSitlo",
        "+6",
        "2-2",
      ],
      Array [
        "5º",
        "Mestre Gui",
        "+5",
        "1-2",
      ],
      Array [
        "5º",
        "Xadas",
        "+5",
        "1-2",
      ],
      Array [
        "7º",
        "Geremias",
        "+4",
        "1-2",
      ],
      Array [
        "7º",
        "Hydra",
        "+4",
        "0-2",
      ],
      Array [
        "7º",
        "Squnha",
        "+4",
        "0-2",
      ],
    ],
  ],
  "text": "Rankings do Brawlhalla#MembrosPtsR🥇Gelly+135-1🥈Wisdow+103-1🥉Cludos+83-24ºXSitlo+62-25ºMestre Gui+51-25ºXadas+51-27ºGeremias+41-27ºHydra+40-27ºSqunha+40-2Pts - Pontos Ganhos | R - ResultadosBrackets",
}
`;

exports[`BusinessTour conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Business Tour",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Jogador",
        "Pts",
      ],
      Array [
        "🥇",
        "Geremias",
        "+13",
      ],
      Array [
        "🥈",
        "Lekky",
        "+10",
      ],
      Array [
        "🥉",
        "Wisdow",
        "+8",
      ],
      Array [
        "4º",
        "Cludos",
        "+6",
      ],
      Array [
        "5º",
        "Mestre Gui",
        "+5",
      ],
      Array [
        "5º",
        "Xadas",
        "+5",
      ],
      Array [
        "7º",
        "Squnha",
        "+4",
      ],
      Array [
        "7º",
        "Gelly",
        "+4",
      ],
    ],
  ],
  "text": "Rankings do Business Tour#JogadorPts🥇Geremias+13🥈Lekky+10🥉Wisdow+84ºCludos+65ºMestre Gui+55ºXadas+57ºSqunha+47ºGelly+4Pts - Pontos Ganhos",
}
`;

exports[`Circuito conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Circuito",
    "H1: Tabela de Jogos do Circuito",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Equipa",
        "Membros",
        "🥇",
        "🥈",
        "🥉",
        "Pontos Circuito",
        "Pontos Ganhos",
      ],
      Array [
        "🥇",
        "Balance",
        "Bárbara, Atlas & Geremias",
        "11",
        "3",
        "6",
        "45",
        "+13",
      ],
      Array [
        "🥈",
        "Anjos Caídos",
        "Xadas, João Nuno & Braz",
        "6",
        "6",
        "8",
        "38",
        "+10",
      ],
      Array [
        "🥉",
        "Faltou 3º Membro",
        "Wisdow & Areias",
        "4",
        "10",
        "6",
        "38",
        "+8",
      ],
    ],
    Array [
      Array [
        "Nº",
        "Jogo",
        "Balance",
        "Anjos Caídos",
        "Faltou 3º Membro",
      ],
      Array [
        "1",
        "Gravidade Zero",
        "🥇",
        "🥉",
        "🥈",
      ],
      Array [
        "2",
        "Sanguessuga",
        "🥈",
        "🥇",
        "🥉",
      ],
      Array [
        "3",
        "Bottle Flip",
        "🥈",
        "🥇",
        "🥉",
      ],
      Array [
        "4",
        "Corrida de Corda e o Badalo",
        "🥇",
        "🥉",
        "🥈",
      ],
      Array [
        "5",
        "Percurso Banana e Laranja",
        "🥉",
        "🥈",
        "🥇",
      ],
      Array [
        "6",
        "Derrubar torre de latas com elásticos",
        "🥇",
        "🥉",
        "🥇",
      ],
      Array [
        "7",
        "Separar m&m por cores",
        "🥇",
        "🥈",
        "🥉",
      ],
      Array [
        "8",
        "Sprint Final",
        "🥇",
        "🥉",
        "🥈",
      ],
      Array [
        "9",
        "Pirâmide de Copos",
        "🥈",
        "🥇",
        "🥉",
      ],
      Array [
        "10",
        "Jogo da Bolacha",
        "🥉",
        "🥈",
        "🥇",
      ],
      Array [
        "11",
        "Derrubar copos com o sopro do balão",
        "🥇",
        "🥉",
        "🥈",
      ],
      Array [
        "12",
        "Procurar uvas na farinha",
        "🥇",
        "🥉",
        "🥈",
      ],
      Array [
        "13",
        "Corrida da colher e os ovos",
        "🥇",
        "🥉",
        "🥈",
      ],
      Array [
        "14",
        "Catapulta de colheres",
        "🥉",
        "🥇",
        "🥈",
      ],
      Array [
        "15",
        "Puzzle de cereais",
        "🥇",
        "🥈",
        "🥉",
      ],
      Array [
        "16",
        "Corrida dos pés atados",
        "🥉",
        "🥇",
        "🥈",
      ],
      Array [
        "17",
        "Tirar as bolas da caixa",
        "🥉",
        "🥈",
        "🥇",
      ],
      Array [
        "18",
        "Crossbar challenge",
        "🥉",
        "🥇",
        "🥈",
      ],
      Array [
        "19",
        "Encesta os copos",
        "🥇",
        "🥈",
        "🥉",
      ],
      Array [
        "20",
        "Batalha de empilhar copos",
        "🥇",
        "🥉",
        "🥈",
      ],
    ],
  ],
  "text": "Rankings do Circuito#EquipaMembros🥇🥈🥉Pontos CircuitoPontos Ganhos🥇BalanceBárbara, Atlas & Geremias113645+13🥈Anjos CaídosXadas, João Nuno & Braz66838+10🥉Faltou 3º MembroWisdow & Areias410638+8Tabela de Jogos do CircuitoNºJogoBalanceAnjos CaídosFaltou 3º Membro1Gravidade Zero🥇🥉🥈2Sanguessuga🥈🥇🥉3Bottle Flip🥈🥇🥉4Corrida de Corda e o Badalo🥇🥉🥈5Percurso Banana e Laranja🥉🥈🥇6Derrubar torre de latas com elásticos🥇🥉🥇7Separar m&m por cores🥇🥈🥉8Sprint Final🥇🥉🥈9Pirâmide de Copos🥈🥇🥉10Jogo da Bolacha🥉🥈🥇11Derrubar copos com o sopro do balão🥇🥉🥈12Procurar uvas na farinha🥇🥉🥈13Corrida da colher e os ovos🥇🥉🥈14Catapulta de colheres🥉🥇🥈15Puzzle de cereais🥇🥈🥉16Corrida dos pés atados🥉🥇🥈17Tirar as bolas da caixa🥉🥈🥇18Crossbar challenge🥉🥇🥈19Encesta os copos🥇🥈🥉20Batalha de empilhar copos🥇🥉🥈",
}
`;

exports[`CounterStrike5x5 conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do CounterStrike 2",
    "H1: Brackets",
  ],
  "iframes": Array [
    Array [
      "CounterStrike",
      "https://challonge.com/pt/up1hx237/module",
    ],
  ],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Nome",
        "Membros",
        "Pts",
      ],
      Array [
        "🥇",
        "Matadores dos Cheios de Fome",
        "Squnha, Mestre Diogo, Rodry, Cludos, Xavier",
        "+8",
      ],
      Array [
        "🥈",
        "ReisDelas",
        "Lemos, Gelly, Hydra, Tone & Lekky",
        "+6",
      ],
      Array [
        "🥉",
        "Os Sportinguistas do Sardoal",
        "Wisdow, Sardoal, João, João Tavares & Lobato",
        "+4",
      ],
      Array [
        "4º",
        "Os Fora da Lei",
        "Geremias, Alcunha, Braz, João Nuno & Xadas",
        "+2",
      ],
    ],
  ],
  "text": "Rankings do CounterStrike 2#NomeMembrosPts🥇Matadores dos Cheios de FomeSqunha, Mestre Diogo, Rodry, Cludos, Xavier+8🥈ReisDelasLemos, Gelly, Hydra, Tone & Lekky+6🥉Os Sportinguistas do SardoalWisdow, Sardoal, João, João Tavares & Lobato+44ºOs Fora da LeiGeremias, Alcunha, Braz, João Nuno & Xadas+2Pts - Pontos GanhosBrackets",
}
`;

exports[`DeadByDaylight conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Dead By Daylight",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Equipas",
        "Membros",
        "Pts",
      ],
      Array [
        "🥇",
        "B",
        "Squnha, Geremias, Cludos & Areias",
        "+8",
      ],
      Array [
        "🥈",
        "A",
        "Xadas, Braz, Atlas & Mestre Gui",
        "+4",
      ],
    ],
    Array [
      Array [
        "Ronda #",
        "Killer A",
        "Pontos A",
        "",
        "Pontos B",
        "Killer B",
      ],
      Array [
        "1",
        "Braz",
        "12 [2*]",
        "-",
        "12 [4*]",
        "Squnha",
      ],
      Array [
        "2",
        "Mestre Gui",
        "9",
        "-",
        "12",
        "Geremias",
      ],
      Array [
        "3",
        "Xadas",
        "3",
        "-",
        "6",
        "Areias",
      ],
      Array [
        "4",
        "Atlas",
        "NR",
        "-",
        "NR",
        "Cludos",
      ],
    ],
  ],
  "text": "Rankings do Dead By Daylight#EquipasMembrosPts🥇BSqunha, Geremias, Cludos & Areias+8🥈AXadas, Braz, Atlas & Mestre Gui+4Pts - Pontos GanhosRonda #Killer APontos APontos BKiller B1Braz12 [2*]-12 [4*]Squnha2Mestre Gui9-12Geremias3Xadas3-6Areias4AtlasNR-NRCludos[N*] - Geradores da Equipa Concertados (1º Critério de Desempate)NR - Não Realizado",
}
`;

exports[`EscapeRoom conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do EscapeRoom",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Nome",
        "Membros",
        "Pts",
        "T",
      ],
      Array [
        "🥇",
        "",
        "Wisdow, Geremias, Cludos, Squnha, Mestre Gui, Camilo, Sardoal",
        "+8",
        "46 min e 6 seg",
      ],
      Array [
        "🥈",
        "",
        "Xadas, Bárbara, João Nuno, Braz, Gama",
        "+4",
        "58 min e 26 seg",
      ],
    ],
  ],
  "text": "Rankings do EscapeRoom#NomeMembrosPtsT🥇Wisdow, Geremias, Cludos, Squnha, Mestre Gui, Camilo, Sardoal+846 min e 6 seg🥈Xadas, Bárbara, João Nuno, Braz, Gama+458 min e 26 segPts - Pontos Ganhos | T - Tempo",
}
`;

exports[`Futbiladas conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Futbiladas",
    "H3: +17 F.C 7 - 9 Liverpool F.C",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "+17 F.C",
        "Resultado",
        "Liverpool F.C",
      ],
      Array [
        "",
        "7-9",
        "Golo Filipe",
      ],
      Array [
        "",
        "7-8",
        "Golo Cunha",
      ],
      Array [
        "Golo Hydra",
        "7-7",
        "",
      ],
      Array [
        "",
        "6-7",
        "Golo Filipe",
      ],
      Array [
        "",
        "6-6",
        "Golo Filipe",
      ],
      Array [
        "",
        "6-5",
        "Golo Sardoal",
      ],
      Array [
        "Golo Costa",
        "6-4",
        "",
      ],
      Array [
        "",
        "5-4",
        "Golo Esquilo",
      ],
      Array [
        "Golo Serino",
        "5-3",
        "",
      ],
      Array [
        "",
        "4-3",
        "Golo Sardoal",
      ],
      Array [
        "Golo Serino",
        "4-2",
        "",
      ],
      Array [
        "Golo Areias",
        "3-2",
        "",
      ],
      Array [
        "",
        "2-2",
        "Golo Sardoal",
      ],
      Array [
        "",
        "2-1",
        "Golo Xadas",
      ],
      Array [
        "Golo Serino",
        "2-0",
        "",
      ],
      Array [
        "Golo Serino",
        "1-0",
        "",
      ],
    ],
    Array [
      Array [
        "Plantel +17 F.C",
        "Plantel Liverpool F.C",
      ],
      Array [
        "Cludos",
        "Wisdow",
      ],
      Array [
        "Serino",
        "Filipe",
      ],
      Array [
        "Areias",
        "Sardoal",
      ],
      Array [
        "João Nuno",
        "Xadas",
      ],
      Array [
        "Tone",
        "Rodry",
      ],
      Array [
        "Hydra",
        "Lemos",
      ],
      Array [
        "Rui",
        "Geremias",
      ],
      Array [
        "Bárbara",
        "Braz",
      ],
      Array [
        "Costa",
        "Squnha",
      ],
      Array [
        "Zé Afonso",
        "Esquilo",
      ],
    ],
    Array [
      Array [
        "Equipas",
        "Pontos Ganhos",
      ],
      Array [
        "Liverpool F.C.",
        "+8 pts",
      ],
      Array [
        "+17 F.C.",
        "+4 pts",
      ],
    ],
  ],
  "text": "Futbiladas+17 F.C 7 - 9 Liverpool F.C+17 F.CResultadoLiverpool F.C7-9Golo Filipe7-8Golo CunhaGolo Hydra7-76-7Golo Filipe6-6Golo Filipe6-5Golo SardoalGolo Costa6-45-4Golo EsquiloGolo Serino5-34-3Golo SardoalGolo Serino4-2Golo Areias3-22-2Golo Sardoal2-1Golo XadasGolo Serino2-0Golo Serino1-0Plantel +17 F.CPlantel Liverpool F.CCludosWisdowSerinoFilipeAreiasSardoalJoão NunoXadasToneRodryHydraLemosRuiGeremiasBárbaraBrazCostaSqunhaZé AfonsoEsquiloEquipasPontos GanhosLiverpool F.C. +8 pts+17 F.C. +4 pts",
}
`;

exports[`LOL5x5 conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do League of Legends 5x5",
    "H1: Brackets",
  ],
  "iframes": Array [
    Array [
      "LeagueOfLegends 5x5",
      "https://challonge.com/pt/ypdqmny0/module",
    ],
  ],
  "images": Array [
    Array [
      "omnimommy",
      "https://biladeirosgit.github.io/bila-olimpiadas/images/omnimommy.png",
    ],
    Array [
      "Chega do Hydra",
      "https://biladeirosgit.github.io/bila-olimpiadas/images/Chega do Hydra.png",
    ],
    Array [
      "Queremos Waffles Quentes",
      "https://biladeirosgit.github.io/bila-olimpiadas/images/Queremos Waffles Quentes.png",
    ],
    Array [
      "Torres do Frazão",
      "https://biladeirosgit.github.io/bila-olimpiadas/images/Torres do Frazão.png",
    ],
  ],
  "tables": Array [
    Array [
      Array [
        "#",
        "Nome",
        "Membros",
        "Pts",
        "R",
      ],
      Array [
        "🥇",
        "omnimommy",
        "Frost, Omniomm, Lekky, Madmess e Zé Afonso",
        "+8",
        "3-1",
      ],
      Array [
        "🥈",
        "Chega do Hydra",
        "Russo, Gama, Cludos, Hydra e Wisdow",
        "+6",
        "2-1",
      ],
      Array [
        "🥉",
        "Queremos Waffles Quentes",
        "Lemos, Gelly, Rodry, Squnha e João Nuno",
        "+4",
        "1-2",
      ],
      Array [
        "4º",
        "Torres do Frazão",
        "Geremias, Mestre Gui, Xadas, Areias e Frazão",
        "+2",
        "0-2",
      ],
    ],
  ],
  "text": "Rankings do League of Legends 5x5#NomeMembrosPtsR🥇omnimommyFrost, Omniomm, Lekky, Madmess e Zé Afonso+83-1🥈Chega do HydraRusso, Gama, Cludos, Hydra e Wisdow+62-1🥉Queremos Waffles QuentesLemos, Gelly, Rodry, Squnha e João Nuno+41-24ºTorres do FrazãoGeremias, Mestre Gui, Xadas, Areias e Frazão+20-2Pts - Pontos Ganhos | J - Jogos | R - ResultadosBrackets",
}
`;

exports[`MinecraftMinigames conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Minecraft Minigames",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Jogador",
        "Pts",
        "PMM",
        "MC",
        "SW1",
        "SW2",
        "SW3",
        "BB1",
        "BB2",
        "BB3",
        "TR1",
        "TR2",
        "TR3",
        "HG",
        "PK",
      ],
      Array [
        "🥇",
        "Squnha",
        "+13",
        "23",
        "2.36",
        "4º",
        "🥇",
        "5º",
        "🥇",
        "🥉",
        "🥈",
        "🥇",
        "🥇",
        "🥇",
        "6º",
        "🥇",
      ],
      Array [
        "🥈",
        "Lobato",
        "+10",
        "20",
        "3.09",
        "🥇",
        "🥉",
        "🥇",
        "5º",
        "4º",
        "🥇",
        "🥈",
        "7º",
        "7º",
        "🥇",
        "🥈",
      ],
      Array [
        "🥉",
        "Geremias",
        "+8",
        "14",
        "3.18",
        "5º",
        "5º",
        "🥈",
        "🥉",
        "🥈",
        "🥉",
        "5º",
        "🥈",
        "🥈",
        "🥉",
        "🥉",
      ],
      Array [
        "4º",
        "Xadas",
        "+6",
        "11",
        "3.27",
        "🥈",
        "6º",
        "🥉",
        "🥉",
        "🥇",
        "4º",
        "4º",
        "4º",
        "🥉",
        "🥈",
        "4º",
      ],
      Array [
        "5º",
        "Lampreia",
        "+5",
        "5",
        "4.72",
        "7º",
        "🥈",
        "6º",
        "🥈",
        "5º",
        "5º",
        "🥉",
        "6º",
        "4º",
        "5º",
        "-",
      ],
      Array [
        "6º",
        "Cludos",
        "+5",
        "2",
        "5",
        "🥉",
        "4º",
        "4º",
        "6º",
        "6º",
        "6º",
        "6º",
        "🥉",
        "6º",
        "4º",
        "-",
      ],
      Array [
        "7º",
        "João Nuno",
        "+4",
        "0",
        "6.54",
        "6º",
        "-",
        "-",
        "7º",
        "7º",
        "7º",
        "7º",
        "5º",
        "5º",
        "-",
        "-",
      ],
    ],
  ],
  "text": "Rankings do Minecraft Minigames#JogadorPtsPMMMCSW1SW2SW3BB1BB2BB3TR1TR2TR3HGPK🥇Squnha+13232.364º🥇5º🥇🥉🥈🥇🥇🥇6º🥇🥈Lobato+10203.09🥇🥉🥇5º4º🥇🥈7º7º🥇🥈🥉Geremias+8143.185º5º🥈🥉🥈🥉5º🥈🥈🥉🥉4ºXadas+6113.27🥈6º🥉🥉🥇4º4º4º🥉🥈4º5ºLampreia+554.727º🥈6º🥈5º5º🥉6º4º5º-6ºCludos+525🥉4º4º6º6º6º6º🥉6º4º-7ºJoão Nuno+406.546º--7º7º7º7º5º5º--Pts - Pontos Ganhos | PMM - Pontos Minecraft Minigames | MC - Média Classificativa | SWn - Sky Wars n | BBn - Build Battle n | TRn - TNT Run n | HG - Hunger Games | PK - Parkour",
}
`;

exports[`Overwatch conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Overwatch 2",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Nome",
        "Membros",
        "Pts",
        "R",
      ],
      Array [
        "🥇",
        "Avecs da Tuga",
        "Rodry, g0mes_27, simas7559, xxbrunoxx2514, Shanks",
        "+8",
        "2-0",
      ],
      Array [
        "🥈",
        "Lacaios do Braz",
        "Braz, João Nuno, Escher, Xadas & Atlas",
        "+6",
        "1-1",
      ],
      Array [
        "🥉",
        "Temos 2 Cunhas",
        "Wisdow, Geremias, Xiro, Squnha & Cludos",
        "+4",
        "0-2",
      ],
    ],
  ],
  "text": "Rankings do Overwatch 2#NomeMembrosPtsR🥇Avecs da TugaRodry, g0mes_27, simas7559, xxbrunoxx2514, Shanks+82-0🥈Lacaios do BrazBraz, João Nuno, Escher, Xadas & Atlas+61-1🥉Temos 2 CunhasWisdow, Geremias, Xiro, Squnha & Cludos+40-2Pts - Pontos Ganhos | R - Resultado",
}
`;

exports[`PickemsLOL conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do League of Legends Worlds Pick'em 2024",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Membros",
        "Pts",
        "Total",
        "Picks",
        "Crystal Ball*",
      ],
      Array [
        "🥇",
        "Squnha",
        "+13",
        "380.8",
        "230",
        "520 (150.8)",
      ],
      Array [
        "🥈",
        "Madmess",
        "+10",
        "341.4",
        "237",
        "360 (104.4)",
      ],
      Array [
        "🥉",
        "Geremias",
        "+8",
        "318.1",
        "205",
        "390 (113.1)",
      ],
      Array [
        "4º",
        "Omniomm",
        "+6",
        "284.4",
        "180",
        "360 (104.4)",
      ],
      Array [
        "5º",
        "João Nuno",
        "+5",
        "284.1",
        "200",
        "290 (84.1)",
      ],
      Array [
        "6º",
        "Mestre Gui",
        "+5",
        "283",
        "225",
        "200 (58)",
      ],
      Array [
        "7º",
        "Bárbara",
        "+4",
        "262.3",
        "155",
        "370 (107.3)",
      ],
      Array [
        "8º",
        "Xadas",
        "+4",
        "259.1",
        "175",
        "290 (84.1)",
      ],
      Array [
        "9º",
        "Areias",
        "+3",
        "256",
        "227",
        "100 (29)",
      ],
      Array [
        "10º",
        "Frazão",
        "+3",
        "220.4",
        "145",
        "260 (75.4)",
      ],
      Array [
        "11º",
        "Cludos",
        "+2",
        "196.4",
        "150",
        "160 (46.4)",
      ],
      Array [
        "12º",
        "Hydra",
        "+2",
        "178.8",
        "115",
        "220 (63.8)",
      ],
    ],
  ],
  "text": "Rankings do League of Legends Worlds Pick'em 2024#MembrosPtsTotalPicksCrystal Ball*🥇Squnha+13380.8230520 (150.8)🥈Madmess+10341.4237360 (104.4)🥉Geremias+8318.1205390 (113.1)4ºOmniomm+6284.4180360 (104.4)5ºJoão Nuno+5284.1200290 (84.1)6ºMestre Gui+5283225200 (58)7ºBárbara+4262.3155370 (107.3)8ºXadas+4259.1175290 (84.1)9ºAreias+3256227100 (29)10ºFrazão+3220.4145260 (75.4)11ºCludos+2196.4150160 (46.4)12ºHydra+2178.8115220 (63.8)Pts - Pontos Ganhos | *Os pontos da Crystal Ball só valeram 29%",
}
`;

exports[`PingPong conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Ping Pong",
    "H1: Brackets",
  ],
  "iframes": Array [
    Array [
      "PingPong",
      "https://challonge.com/pt/cc3rurwi/module",
    ],
  ],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Membros",
        "Pts",
      ],
      Array [
        "🥇",
        "Xadas",
        "+13",
      ],
      Array [
        "🥈",
        "João Nuno",
        "+10",
      ],
      Array [
        "🥉",
        "Lekky",
        "+8",
      ],
      Array [
        "4º",
        "Atlas",
        "+6",
      ],
      Array [
        "5º",
        "Bárbara",
        "+5",
      ],
      Array [
        "5º",
        "Braz",
        "+5",
      ],
      Array [
        "7º",
        "Squnha",
        "+4",
      ],
      Array [
        "8º",
        "Cludos",
        "+4",
      ],
      Array [
        "9º",
        "Lemos",
        "+3",
      ],
      Array [
        "10º",
        "Gelly",
        "+3",
      ],
    ],
  ],
  "text": "Rankings do Ping Pong#MembrosPts🥇Xadas+13🥈João Nuno+10🥉Lekky+84ºAtlas+65ºBárbara+55ºBraz+57ºSqunha+48ºCludos+49ºLemos+310ºGelly+3Pts - Pontos GanhosBrackets",
}
`;

exports[`Rankings conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Ranking Geral",
  ],
  "iframes": Array [],
  "images": Array [
    Array [
      "Squnha",
      "images/Squnha.png",
    ],
    Array [
      "Xadas",
      "images/Xadas.png",
    ],
    Array [
      "Cludos",
      "images/Cludos.png",
    ],
    Array [
      "Geremias",
      "images/Geremias.png",
    ],
    Array [
      "Wisdow",
      "images/Wisdow.png",
    ],
    Array [
      "Bárbara",
      "images/Bárbara.png",
    ],
    Array [
      "Braz",
      "images/Braz.png",
    ],
    Array [
      "Mestre Gui",
      "images/Mestre Gui.png",
    ],
    Array [
      "João Nuno",
      "images/João Nuno.png",
    ],
    Array [
      "Lemos",
      "images/Lemos.png",
    ],
    Array [
      "Hydra",
      "images/Hydra.png",
    ],
    Array [
      "Gelly",
      "images/Gelly.png",
    ],
    Array [
      "Atlas",
      "images/Atlas.png",
    ],
    Array [
      "Areias",
      "images/Areias.png",
    ],
    Array [
      "Lekky",
      "images/Lekky.png",
    ],
    Array [
      "Rodry",
      "images/Rodry.png",
    ],
    Array [
      "Madmess",
      "images/Madmess.png",
    ],
    Array [
      "Esquilo",
      "images/Esquilo.png",
    ],
    Array [
      "Sardoal",
      "images/Sardoal.png",
    ],
    Array [
      "Omniomm",
      "images/Omniomm.png",
    ],
    Array [
      "Camilo",
      "images/Camilo.png",
    ],
    Array [
      "Alcunha",
      "images/Alcunha.png",
    ],
    Array [
      "Frazão",
      "images/Frazão.png",
    ],
    Array [
      "Droga",
      "images/Droga.png",
    ],
    Array [
      "Frosty",
      "images/Frosty.png",
    ],
    Array [
      "Lobato",
      "images/Lobato.png",
    ],
    Array [
      "Tone",
      "images/Tone.png",
    ],
    Array [
      "Serino",
      "images/Serino.png",
    ],
    Array [
      "Gama",
      "images/Gama.png",
    ],
    Array [
      "Escher",
      "images/Escher.png",
    ],
    Array [
      "Xiro",
      "images/Xiro.png",
    ],
    Array [
      "Lampreia",
      "images/Lampreia.png",
    ],
    Array [
      "Filipe",
      "images/Filipe.png",
    ],
    Array [
      "Zé",
      "images/Zé.png",
    ],
    Array [
      "Mestre Diogo",
      "images/Mestre Diogo.png",
    ],
    Array [
      "Xavier",
      "images/Xavier.png",
    ],
    Array [
      "g0mes_26",
      "images/g0mes_26.png",
    ],
    Array [
      "simas7559",
      "images/simas7559.png",
    ],
    Array [
      "xxbrunoxx2514",
      "images/xxbrunoxx2514.png",
    ],
    Array [
      "Shanks",
      "images/Shanks.png",
    ],
    Array [
      "Soares",
      "images/Soares.png",
    ],
    Array [
      "Simão",
      "images/Simão.png",
    ],
    Array [
      "Russo",
      "images/Russo.png",
    ],
    Array [
      "XSitlo",
      "images/XSitlo.png",
    ],
    Array [
      "Zé Afonso",
      "images/Zé Afonso.png",
    ],
    Array [
      "Migas",
      "images/Migas.png",
    ],
    Array [
      "Brito",
      "images/Brito.png",
    ],
    Array [
      "Rui",
      "images/Rui.png",
    ],
    Array [
      "Costa",
      "images/Costa.png",
    ],
    Array [
      "Diogo",
      "images/Diogo.png",
    ],
    Array [
      "Joãozinho",
      "images/Joãozinho.png",
    ],
    Array [
      "João Tavares",
      "images/João Tavares.png",
    ],
    Array [
      "Maria",
      "images/Maria.png",
    ],
  ],
  "tables": Array [
    Array [
      Array [
        "Rank",
        "Player",
        "Pontos",
        "Participações",
        "Média Pontos por Torneio",
        "🥇",
        "🥈",
        "🥉",
      ],
      Array [
        "1",
        "Squnha",
        "167",
        "23",
        "7.26",
        "9",
        "4",
        "4",
      ],
      Array [
        "2",
        "Xadas",
        "154",
        "24",
        "6.42",
        "5",
        "7",
        "1",
      ],
      Array [
        "3",
        "Cludos",
        "130",
        "22",
        "5.91",
        "4",
        "5",
        "3",
      ],
      Array [
        "4",
        "Geremias",
        "127",
        "21",
        "6.05",
        "5",
        "2",
        "3",
      ],
      Array [
        "5",
        "Wisdow",
        "106",
        "17",
        "6.24",
        "3",
        "2",
        "6",
      ],
      Array [
        "6",
        "Bárbara",
        "103",
        "16",
        "6.44",
        "3",
        "5",
        "2",
      ],
      Array [
        "7",
        "Braz",
        "85",
        "15",
        "5.67",
        "1",
        "6",
        "3",
      ],
      Array [
        "8",
        "Mestre Gui",
        "83",
        "13",
        "6.38",
        "3",
        "2",
        "1",
      ],
      Array [
        "9",
        "João Nuno",
        "81",
        "15",
        "5.4",
        "1",
        "5",
        "3",
      ],
      Array [
        "10",
        "Lemos",
        "53",
        "10",
        "5.3",
        "2",
        "3",
        "1",
      ],
      Array [
        "11",
        "Hydra",
        "51",
        "13",
        "3.92",
        "1",
        "3",
        "1",
      ],
      Array [
        "12",
        "Gelly",
        "47",
        "9",
        "5.22",
        "1",
        "2",
        "1",
      ],
      Array [
        "13",
        "Atlas",
        "42",
        "7",
        "6",
        "1",
        "3",
        "1",
      ],
      Array [
        "14",
        "Areias",
        "42",
        "8",
        "5.25",
        "2",
        "2",
        "1",
      ],
      Array [
        "15",
        "Lekky",
        "40",
        "11",
        "3.64",
        "3",
        "1",
        "1",
      ],
      Array [
        "16",
        "Rodry",
        "37",
        "6",
        "6.17",
        "3",
        "0",
        "1",
      ],
      Array [
        "17",
        "Madmess",
        "31",
        "3",
        "10.33",
        "2",
        "1",
        "0",
      ],
      Array [
        "18",
        "Esquilo",
        "31",
        "5",
        "6.2",
        "2",
        "0",
        "0",
      ],
      Array [
        "19",
        "Sardoal",
        "31",
        "6",
        "5.17",
        "2",
        "0",
        "1",
      ],
      Array [
        "20",
        "Omniomm",
        "27",
        "3",
        "9",
        "2",
        "0",
        "0",
      ],
      Array [
        "21",
        "Camilo",
        "20",
        "3",
        "6.67",
        "1",
        "0",
        "1",
      ],
      Array [
        "22",
        "Alcunha",
        "20",
        "4",
        "5",
        "0",
        "1",
        "0",
      ],
      Array [
        "23",
        "Frazão",
        "19",
        "6",
        "3.17",
        "0",
        "0",
        "0",
      ],
      Array [
        "24",
        "Droga",
        "18",
        "2",
        "9",
        "1",
        "0",
        "0",
      ],
      Array [
        "25",
        "Frosty",
        "16",
        "2",
        "8",
        "1",
        "0",
        "1",
      ],
      Array [
        "26",
        "Lobato",
        "14",
        "2",
        "7",
        "0",
        "1",
        "1",
      ],
      Array [
        "27",
        "Tone",
        "13",
        "4",
        "3.25",
        "0",
        "3",
        "0",
      ],
      Array [
        "28",
        "Serino",
        "12",
        "2",
        "6",
        "1",
        "1",
        "0",
      ],
      Array [
        "29",
        "Gama",
        "10",
        "2",
        "5",
        "0",
        "2",
        "0",
      ],
      Array [
        "29",
        "Escher",
        "10",
        "2",
        "5",
        "0",
        "1",
        "1",
      ],
      Array [
        "31",
        "Xiro",
        "9",
        "2",
        "4.5",
        "0",
        "0",
        "1",
      ],
      Array [
        "31",
        "Lampreia",
        "9",
        "2",
        "4.5",
        "0",
        "0",
        "0",
      ],
      Array [
        "33",
        "Filipe",
        "8",
        "1",
        "8",
        "1",
        "0",
        "0",
      ],
      Array [
        "33",
        "Zé",
        "8",
        "1",
        "8",
        "1",
        "0",
        "0",
      ],
      Array [
        "33",
        "Mestre Diogo",
        "8",
        "1",
        "8",
        "1",
        "0",
        "0",
      ],
      Array [
        "33",
        "Xavier",
        "8",
        "1",
        "8",
        "1",
        "0",
        "0",
      ],
      Array [
        "33",
        "g0mes_26",
        "8",
        "1",
        "8",
        "1",
        "0",
        "0",
      ],
      Array [
        "33",
        "simas7559",
        "8",
        "1",
        "8",
        "1",
        "0",
        "0",
      ],
      Array [
        "33",
        "xxbrunoxx2514",
        "8",
        "1",
        "8",
        "1",
        "0",
        "0",
      ],
      Array [
        "33",
        "Shanks",
        "8",
        "1",
        "8",
        "1",
        "0",
        "0",
      ],
      Array [
        "33",
        "Soares",
        "8",
        "1",
        "8",
        "1",
        "0",
        "0",
      ],
      Array [
        "42",
        "Simão",
        "8",
        "1",
        "8",
        "0",
        "0",
        "1",
      ],
      Array [
        "43",
        "Russo",
        "6",
        "1",
        "6",
        "0",
        "1",
        "0",
      ],
      Array [
        "43",
        "XSitlo",
        "6",
        "1",
        "6",
        "0",
        "0",
        "0",
      ],
      Array [
        "45",
        "Zé Afonso",
        "6",
        "2",
        "3",
        "1",
        "1",
        "0",
      ],
      Array [
        "46",
        "Migas",
        "5",
        "1",
        "5",
        "0",
        "0",
        "0",
      ],
      Array [
        "46",
        "Brito",
        "5",
        "1",
        "5",
        "0",
        "0",
        "0",
      ],
      Array [
        "48",
        "Rui",
        "4",
        "1",
        "4",
        "0",
        "1",
        "0",
      ],
      Array [
        "48",
        "Costa",
        "4",
        "1",
        "4",
        "0",
        "1",
        "0",
      ],
      Array [
        "48",
        "Diogo",
        "4",
        "1",
        "4",
        "0",
        "0",
        "1",
      ],
      Array [
        "48",
        "Joãozinho",
        "4",
        "1",
        "4",
        "0",
        "0",
        "1",
      ],
      Array [
        "48",
        "João Tavares",
        "4",
        "1",
        "4",
        "0",
        "0",
        "1",
      ],
      Array [
        "48",
        "Maria",
        "4",
        "1",
        "4",
        "0",
        "0",
        "1",
      ],
    ],
  ],
  "text": "IndividualDuosTriosGrupoOnline PresencialMarço Abril Maio Junho Julho Agosto OutubroSort by: RankPontosParticipaçõesMédia Pontos por Torneio🥇🥈🥉Ranking GeralRankPlayerPontosParticipaçõesMédia Pontos por Torneio🥇🥈🥉1Squnha167237.269442Xadas154246.425713Cludos130225.914534Geremias127216.055235Wisdow106176.243266Bárbara103166.443527Braz85155.671638Mestre Gui83136.383219João Nuno81155.415310Lemos53105.323111Hydra51133.9213112Gelly4795.2212113Atlas427613114Areias4285.2522115Lekky40113.6431116Rodry3766.1730117Madmess31310.3321018Esquilo3156.220019Sardoal3165.1720120Omniomm273920021Camilo2036.6710122Alcunha204501023Frazão1963.1700024Droga182910025Frosty162810126Lobato142701127Tone1343.2503028Serino122611029Gama102502029Escher102501131Xiro924.500131Lampreia924.500033Filipe81810033Zé81810033Mestre Diogo81810033Xavier81810033g0mes_2681810033simas755981810033xxbrunoxx251481810033Shanks81810033Soares81810042Simão81800143Russo61601043XSitlo61600045Zé Afonso62311046Migas51500046Brito51500048Rui41401048Costa41401048Diogo41400148Joãozinho41400148João Tavares41400148Maria414001",
}
`;

exports[`RocketLeague3x3 conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Rocket League 3x3",
    "H1: Brackets",
  ],
  "iframes": Array [
    Array [
      "RocketLeague",
      "https://challonge.com/cqbcuyhu/module",
    ],
  ],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Nome",
        "Membros",
        "Pts",
      ],
      Array [
        "🥇",
        "BrotherZ in PaRiS",
        "Hydra, Lekky & Squnha",
        "+8",
      ],
      Array [
        "🥈",
        "Winners Queue",
        "Gelly, Tone & Lemos",
        "+6",
      ],
      Array [
        "🥉",
        "Douradinhos de Frango",
        "Braz, Escher & Atlas",
        "+4",
      ],
      Array [
        "4º",
        "Falamos no FIFA",
        "Wisdow, Cludos & Sardoal",
        "+3",
      ],
      Array [
        "5º",
        "Frazão sobre Rodas",
        "Frazão, Bárbara & Xadas",
        "+2",
      ],
      Array [
        "5º",
        "O Verdadeiro Cunha",
        "Mestre Gui, Geremias & Alcunha",
        "+2",
      ],
    ],
  ],
  "text": "Rankings do Rocket League 3x3#NomeMembrosPts🥇BrotherZ in PaRiSHydra, Lekky & Squnha+8🥈Winners QueueGelly, Tone & Lemos+6🥉Douradinhos de FrangoBraz, Escher & Atlas+44ºFalamos no FIFAWisdow, Cludos & Sardoal+35ºFrazão sobre RodasFrazão, Bárbara & Xadas+25ºO Verdadeiro CunhaMestre Gui, Geremias & Alcunha+2Pts - Pontos GanhosBrackets",
}
`;

exports[`Scribblio conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Scribbl.io",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Nome",
        "Pts",
        "Ps",
      ],
      Array [
        "🥇",
        "Squnha",
        "+13",
        "32545",
      ],
      Array [
        "🥈",
        "Braz",
        "+10",
        "32025",
      ],
      Array [
        "🥉",
        "Mestre Gui",
        "+8",
        "30705",
      ],
      Array [
        "4º",
        "Frazão",
        "+6",
        "29095",
      ],
      Array [
        "5º",
        "Geremias",
        "+5",
        "28410",
      ],
      Array [
        "6º",
        "Lemos",
        "+5",
        "27115",
      ],
      Array [
        "7º",
        "Cludos",
        "+4",
        "26295",
      ],
      Array [
        "8º",
        "Xadas",
        "+4",
        "25635",
      ],
      Array [
        "9º",
        "Bárbara",
        "+3",
        "25095",
      ],
      Array [
        "10º",
        "Hydra",
        "+3",
        "23565",
      ],
      Array [
        "11º",
        "Wisdow",
        "+2",
        "22235",
      ],
      Array [
        "12º",
        "Lekky",
        "+2",
        "20325",
      ],
    ],
  ],
  "text": "Rankings do Scribbl.io#NomePtsPs🥇Squnha+1332545🥈Braz+1032025🥉Mestre Gui+8307054ºFrazão+6290955ºGeremias+5284106ºLemos+5271157ºCludos+4262958ºXadas+4256359ºBárbara+32509510ºHydra+32356511ºWisdow+22223512ºLekky+220325Pts - Pontos Ganhos | Ps - Pontos Scribbl.io",
}
`;

exports[`Sueca conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Sueca",
    "H1: Brackets",
  ],
  "iframes": Array [
    Array [
      "Sueca",
      "https://challonge.com/pt/egpr25tn/module",
    ],
  ],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Duos",
        "Pts",
      ],
      Array [
        "🥇",
        "Xadas e Bárbara",
        "+13",
      ],
      Array [
        "🥈",
        "Cludos e Lemos",
        "+10",
      ],
      Array [
        "🥉",
        "Wisdow e Squnha",
        "+8",
      ],
      Array [
        "4º",
        "Geremias e Esquilo",
        "+6",
      ],
      Array [
        "5º",
        "Braz e Atlas",
        "+5",
      ],
      Array [
        "5º",
        "Hydra e Lekky",
        "+5",
      ],
    ],
  ],
  "text": "Rankings do Sueca#DuosPts🥇Xadas e Bárbara+13🥈Cludos e Lemos+10🥉Wisdow e Squnha+84ºGeremias e Esquilo+65ºBraz e Atlas+55ºHydra e Lekky+5Pts - Pontos GanhosBrackets",
}
`;

exports[`TFT conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings Teamfight Tactics",
    "H1: Tabela do Grupo 1",
    "H1: Tabela do Grupo 2",
    "H1: Tabela do Grupo Final",
  ],
  "iframes": Array [],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Nome",
        "Pts",
      ],
      Array [
        "🥇",
        "Droga",
        "+13",
      ],
      Array [
        "🥈",
        "Mestre Gui",
        "+10",
      ],
      Array [
        "🥉",
        "Xadas",
        "+8",
      ],
      Array [
        "🥉",
        "Bárbara",
        "+8",
      ],
      Array [
        "5º",
        "Cludos",
        "+5",
      ],
      Array [
        "6º",
        "Geremias",
        "+5",
      ],
      Array [
        "7º",
        "Squnha",
        "+4",
      ],
      Array [
        "8º",
        "Hydra",
        "+4",
      ],
      Array [
        "9º",
        "João Nuno",
        "+3",
      ],
      Array [
        "9º",
        "Wisdow",
        "+3",
      ],
      Array [
        "10º",
        "Lekky",
        "+3",
      ],
      Array [
        "10º",
        "Braz",
        "+3",
      ],
    ],
    Array [
      Array [
        "#",
        "Nome",
        "J",
        "ML",
        "1L",
        "2L",
        "3L",
        "4L",
        "5L",
        "6L",
        "7L",
        "8L",
      ],
      Array [
        "🥇",
        "Xadas",
        "3",
        "2",
        "2",
        "0",
        "0",
        "1",
        "0",
        "0",
        "0",
        "0",
      ],
      Array [
        "🥈",
        "Squnha",
        "3",
        "2.67",
        "0",
        "1",
        "2",
        "0",
        "0",
        "0",
        "0",
        "0",
      ],
      Array [
        "🥉",
        "Geremias",
        "3",
        "3.65",
        "1",
        "1",
        "0",
        "0",
        "0",
        "1",
        "0",
        "0",
      ],
      Array [
        "4º",
        "Hydra",
        "3",
        "4",
        "0",
        "1",
        "0",
        "0",
        "2",
        "0",
        "0",
        "0",
      ],
      Array [
        "5º",
        "João Nuno",
        "3",
        "4.33",
        "0",
        "0",
        "0",
        "1",
        "2",
        "0",
        "0",
        "0",
      ],
      Array [
        "6º",
        "Lekky",
        "3",
        "5",
        "0",
        "0",
        "1",
        "0",
        "0",
        "2",
        "0",
        "0",
      ],
    ],
    Array [
      Array [
        "#",
        "Nome",
        "J",
        "ML",
        "1L",
        "2L",
        "3L",
        "4L",
        "5L",
        "6L",
        "7L",
        "8L",
      ],
      Array [
        "🥇",
        "Droga",
        "3",
        "1.67",
        "1",
        "2",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
      ],
      Array [
        "🥈",
        "Bárbara",
        "3",
        "2.67",
        "1",
        "0",
        "1",
        "1",
        "0",
        "0",
        "0",
        "0",
      ],
      Array [
        "🥉",
        "Mestre Gui",
        "3",
        "2.67",
        "0",
        "1",
        "2",
        "0",
        "0",
        "0",
        "0",
        "0",
      ],
      Array [
        "4º",
        "Cludos",
        "3",
        "3",
        "1",
        "0",
        "0",
        "2",
        "0",
        "0",
        "0",
        "0",
      ],
      Array [
        "5º",
        "Wisdow",
        "3",
        "5.33",
        "0",
        "0",
        "0",
        "0",
        "2",
        "1",
        "0",
        "0",
      ],
      Array [
        "6º",
        "Braz",
        "3",
        "5.67",
        "0",
        "0",
        "0",
        "0",
        "1",
        "2",
        "0",
        "0",
      ],
    ],
    Array [
      Array [
        "#",
        "Nome",
        "J",
        "ML",
        "1L",
        "2L",
        "3L",
        "4L",
        "5L",
        "6L",
        "7L",
        "8L",
      ],
      Array [
        "🥇",
        "Droga",
        "3",
        "2.33",
        "1",
        "0",
        "2",
        "0",
        "0",
        "0",
        "0",
        "0",
      ],
      Array [
        "🥈",
        "Mestre Gui",
        "3",
        "2.67",
        "1",
        "1",
        "0",
        "0",
        "1",
        "0",
        "0",
        "0",
      ],
      Array [
        "🥉",
        "Xadas",
        "3",
        "3.67",
        "0",
        "1",
        "1",
        "0",
        "0",
        "1",
        "0",
        "0",
      ],
      Array [
        "🥉",
        "Bárbara",
        "3",
        "3.67",
        "0",
        "1",
        "0",
        "1",
        "1",
        "0",
        "0",
        "0",
      ],
      Array [
        "5º",
        "Cludos",
        "3",
        "4",
        "1",
        "0",
        "0",
        "0",
        "1",
        "1",
        "0",
        "0",
      ],
      Array [
        "6º",
        "Geremias",
        "3",
        "4.67",
        "0",
        "0",
        "0",
        "2",
        "0",
        "1",
        "0",
        "0",
      ],
      Array [
        "7º",
        "Squnha",
        "3",
        "7",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "3",
        "0",
      ],
      Array [
        "8º",
        "Hydra",
        "3",
        "8",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "3",
      ],
    ],
  ],
  "text": "Rankings Teamfight Tactics#NomePts🥇Droga+13🥈Mestre Gui+10🥉Xadas+8🥉Bárbara+85ºCludos+56ºGeremias+57ºSqunha+48ºHydra+49ºJoão Nuno+39ºWisdow+310ºLekky+310ºBraz+3Tabela do Grupo 1#NomeJML1L2L3L4L5L6L7L8L🥇Xadas3220010000🥈Squnha32.6701200000🥉Geremias33.65110001004ºHydra34010020005ºJoão Nuno34.33000120006ºLekky3500100200Tabela do Grupo 2#NomeJML1L2L3L4L5L6L7L8L🥇Droga31.6712000000🥈Bárbara32.6710110000🥉Mestre Gui32.67012000004ºCludos33100200005ºWisdow35.33000021006ºBraz35.6700001200Tabela do Grupo Final#NomeJML1L2L3L4L5L6L7L8L🥇Droga32.3310200000🥈Mestre Gui32.6711001000🥉Xadas33.6701100100🥉Bárbara33.67010110005ºCludos34100011006ºGeremias34.67000201007ºSqunha37000000308ºHydra3800000003Pts - Pontos Ganhos | J - Jogos | ML - Média de Lugares | nL - Lugares",
}
`;

exports[`Volleyball conteudo inalterado 1`] = `
Object {
  "headings": Array [
    "H1: Rankings do Volleyball",
    "H1: Resultados",
  ],
  "iframes": Array [
    Array [
      "Volleyball",
      "https://challonge.com/pt/6d052y0e/module",
    ],
  ],
  "images": Array [],
  "tables": Array [
    Array [
      Array [
        "#",
        "Membros",
        "Pts",
        "R",
      ],
      Array [
        "🥇",
        "Squnha, Areias & Soares",
        "+8",
        "2-0",
      ],
      Array [
        "🥈",
        "Xadas, Bárbara & Cludos",
        "+6",
        "1-1",
      ],
      Array [
        "🥉",
        "Braz, João Nuno & Maria",
        "+4",
        "0-2",
      ],
    ],
  ],
  "text": "Rankings do Volleyball#MembrosPtsR🥇Squnha, Areias & Soares+82-0🥈Xadas, Bárbara & Cludos+61-1🥉Braz, João Nuno & Maria+40-2Pts - Pontos Ganhos | R - ResultadosResultados",
}
`;

exports[`invariantes contagem de tabelas por pagina 1`] = `
Object {
  "AmongUs": 1,
  "ArenasLOL": 1,
  "Basquetiladas": 2,
  "BatalhaNaval": 1,
  "Bilabilhar": 1,
  "BilapredictsEuropeu": 1,
  "Bilatrecos": 1,
  "Brawlhalla": 1,
  "BusinessTour": 1,
  "Circuito": 2,
  "CounterStrike5x5": 1,
  "DeadByDaylight": 2,
  "EscapeRoom": 1,
  "Futbiladas": 3,
  "LOL5x5": 1,
  "MinecraftMinigames": 1,
  "Overwatch": 1,
  "PickemsLOL": 1,
  "PingPong": 1,
  "RocketLeague3x3": 1,
  "Scribblio": 1,
  "Sueca": 1,
  "TFT": 4,
  "Volleyball": 1,
}
`;

exports[`invariantes total de celulas por pagina de torneio 1`] = `
Object {
  "AmongUs": 99,
  "ArenasLOL": 80,
  "Basquetiladas": 24,
  "BatalhaNaval": 6,
  "Bilabilhar": 36,
  "BilapredictsEuropeu": 84,
  "Bilatrecos": 54,
  "Brawlhalla": 36,
  "BusinessTour": 24,
  "Circuito": 124,
  "CounterStrike5x5": 16,
  "DeadByDaylight": 32,
  "EscapeRoom": 10,
  "Futbiladas": 72,
  "LOL5x5": 20,
  "MinecraftMinigames": 112,
  "Overwatch": 15,
  "PickemsLOL": 72,
  "PingPong": 30,
  "RocketLeague3x3": 24,
  "Scribblio": 48,
  "Sueca": 18,
  "TFT": 276,
  "Volleyball": 12,
}
`;
